--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,22 @@
-group 'dohjava'
-version '0.0.1'
-
 apply plugin: 'java'
+apply plugin: 'java-library'
+apply plugin: 'maven-publish'
+apply plugin: 'signing'
+apply plugin: 'application'
 
 sourceCompatibility = 1.8
 
+group = "uk.num"
+applicationName = "dohjava"
+archivesBaseName = "dohjava"
+version = "0.0.1"
+
 repositories {
     mavenCentral()
+}
+
+wrapper {
+    gradleVersion = '4.10'
 }
 
 dependencies {
@@ -25,5 +35,65 @@ task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
     classifier = 'sources'
 }
+
+task javadocJar(type: Jar) {
+    from javadoc
+    classifier = 'javadoc'
+}
+
+artifacts {
+    archives sourcesJar
+}
+
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId = 'dohjava'
+            from components.java
+            artifact sourcesJar
+            artifact javadocJar
+            pom {
+                name = 'dohjava'
+                description = 'Java implementation of DNS over HTTPS (RFC8484)'
+                url = 'https://github.com/NUMprotocol/dohjava'
+                licenses {
+                    license {
+                        name = 'MIT license'
+                        url = 'https://opensource.org/licenses/MIT'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'alex@caerkettontech.com'
+                        name = 'Alex Dalitz'
+                        email = 'alex@caerkettontech.com'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:git://NUMprotocol/dohjava.git'
+                    developerConnection = 'scm:git:git://NUMprotocol/dohjava.git'
+                    url = 'https://github.com/NUMprotocol/dohjava'
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            // change URLs to point to your repos, e.g. http://my.org/repo
+//            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2" {
+//                authentication(userName: ossrhUsername, password: ossrhPassword)
+//            }
+            def releasesRepoUrl = "$buildDir/repos/releases"
+            def snapshotsRepoUrl = "$buildDir/repos/snapshots"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+        }
+    }
+}
+
+signing {
+    sign publishing.publications.mavenJava
+}
+
 
 
